# dual-chain-geophase

./: .gitignore  CHANGELOG-2026-01-16.md  CHANGELOG-IP-BOUNDARY-2026-01-16.md  CHECKLIST_DESTRUCTION.md  CHECKLIST_EIP712.md  DOCS_INDEX.md  DUAL_GEO_PHASE.md  Dockerfile  ECC_TUNING.md  ETH-BRIDGE-README.md  ETH-BRIDGE-SHIPPED.md  ETH-BRIDGE-V0.1.1-HARDENING.md  GEOPHASE.md  IMPLEMENTATION_SUMMARY_DESTRUCTION.md  IMPLEMENTATION_SUMMARY_EIP712.md  INTEGRATION_DUAL_GEO_PHASE.md  INTEGRATION_SUMMARY.md  MATHEMATICS.md  Makefile  PROPRIETARY-NOTICE.md  QUICKSTART.md  README.md  RELEASE_v0.2.0.md  RFC6979_CHEATSHEET.md  RFC6979_DELIVERY.md  RFC6979_INDEX.md  RFC6979_INTEGRATION.md  RFC6979_README.md  RFC6979_SUMMARY.md  SECURITY-ANCHORS.md  SECURITY.md  deploy.sh  docker-compose.yml  foundry.toml  pyproject.toml  requirements.txt  self_check.sh
.devcontainer/: devcontainer.json
.venv_test/: pyvenv.cfg
contracts/: AnankeAttestationRegistry.sol  AnankeRevocationRegistry.sol  README.md
docs/: APPENDIX_SCALAR_WAZE_UNIFIED.md  CAPABILITY_DESTRUCTION.md  CLAIMS_REGISTER.md  EIP712_POLICY_GRANT.md  INTEGRATION_QUICKSTART.md  NON_CLAIMS.md  REGULATOR-QA.md  RFC6979-NONCE-POLICY.md  SCALAR_WAZE_BOUNDARY.md
script/: Deploy.s.sol
scripts/: encode_blackbox.py  example_server.py  public_test.py  sign_policy_grant.py  test_chain_integration.py  verify_blackbox.py  verify_blackbox_wrongkey.py
tests/: test_bytecode_lock.py  test_covenant_gate.py  test_destruction.py  test_dual_phase_distance.py  test_ecc_blackbox.py  test_eth_integration.py  test_fail_closed.py  test_mixer.py  (+6 more)
(+43 files in other folders)
