[project]
name = "geophase"
version = "0.2.0"
description = "Covenant-first block-chain transport pattern for authenticated ciphertext"
requires-python = ">=3.10"
authors = [
    {name = "Contributors", email = "maintainers@example.com"}
]
dependencies = [
    "cryptography>=42.0",
    "reedsolo>=1.7"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]